--- a/MD_simulation/expl_animations.ipynb
+++ b/MD_simulation/expl_animations.ipynb
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +405,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████| 9999/9999 [02:33<00:00, 65.07it/s]\n"
+      "100%|█████████████████████████████████████| 19999/19999 [05:12<00:00, 63.99it/s]\n"
      ]
     }
    ],
@@ -426,7 +426,7 @@
     "# plot_velocity_hist(velocities_ini, False)\n",
     "\n",
     "TIMESTEP = 0.0001\n",
-    "N_STEPS = 10000\n",
+    "N_STEPS = 20000\n",
     "\n",
     "res = do_md_pdb(positions_ini, velocities_ini, dt=TIMESTEP, n_steps=N_STEPS, box=BOX, boxl=BOXL)\n",
     "\n",
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -456,12 +456,29 @@
     "ani = animation.FuncAnimation(fig, animate, frames=len(positions_movie_xy_short))\n",
     "plt.close()\n",
     "## this function will create a lot of *.png files in a folder 'atom_test2d_frames'\n",
-    "ani.save('Animations/atoms_test2d33355xxxxxx.html', writer=animation.HTMLWriter(fps=30))"
+    "ani.save('Animations/atoms_test2d33355zzz.html', writer=animation.HTMLWriter(fps=30))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "MovieWriter imagemagick unavailable; using Pillow instead.\n"
+     ]
+    }
+   ],
+   "source": [
+    "ani.save('myAnimation.gif', writer='imagemagick', fps=30)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -652,42 +669,42 @@
        "</style>\n",
        "\n",
        "<div class=\"animation\">\n",
-       "  <img id=\"_anim_imgca98f79962dd4f03823d05eee973f0e0\">\n",
+       "  <img id=\"_anim_img720a6cfe100547e8b4570dfca532257e\">\n",
        "  <div class=\"anim-controls\">\n",
-       "    <input id=\"_anim_sliderca98f79962dd4f03823d05eee973f0e0\" type=\"range\" class=\"anim-slider\"\n",
+       "    <input id=\"_anim_slider720a6cfe100547e8b4570dfca532257e\" type=\"range\" class=\"anim-slider\"\n",
        "           name=\"points\" min=\"0\" max=\"1\" step=\"1\" value=\"0\"\n",
-       "           oninput=\"animca98f79962dd4f03823d05eee973f0e0.set_frame(parseInt(this.value));\"></input>\n",
+       "           oninput=\"anim720a6cfe100547e8b4570dfca532257e.set_frame(parseInt(this.value));\"></input>\n",
        "    <div class=\"anim-buttons\">\n",
-       "      <button title=\"Decrease speed\" aria-label=\"Decrease speed\" onclick=\"animca98f79962dd4f03823d05eee973f0e0.slower()\">\n",
+       "      <button title=\"Decrease speed\" aria-label=\"Decrease speed\" onclick=\"anim720a6cfe100547e8b4570dfca532257e.slower()\">\n",
        "          <i class=\"fa fa-minus\"></i></button>\n",
-       "      <button title=\"First frame\" aria-label=\"First frame\" onclick=\"animca98f79962dd4f03823d05eee973f0e0.first_frame()\">\n",
+       "      <button title=\"First frame\" aria-label=\"First frame\" onclick=\"anim720a6cfe100547e8b4570dfca532257e.first_frame()\">\n",
        "        <i class=\"fa fa-fast-backward\"></i></button>\n",
-       "      <button title=\"Previous frame\" aria-label=\"Previous frame\" onclick=\"animca98f79962dd4f03823d05eee973f0e0.previous_frame()\">\n",
+       "      <button title=\"Previous frame\" aria-label=\"Previous frame\" onclick=\"anim720a6cfe100547e8b4570dfca532257e.previous_frame()\">\n",
        "          <i class=\"fa fa-step-backward\"></i></button>\n",
-       "      <button title=\"Play backwards\" aria-label=\"Play backwards\" onclick=\"animca98f79962dd4f03823d05eee973f0e0.reverse_animation()\">\n",
+       "      <button title=\"Play backwards\" aria-label=\"Play backwards\" onclick=\"anim720a6cfe100547e8b4570dfca532257e.reverse_animation()\">\n",
        "          <i class=\"fa fa-play fa-flip-horizontal\"></i></button>\n",
-       "      <button title=\"Pause\" aria-label=\"Pause\" onclick=\"animca98f79962dd4f03823d05eee973f0e0.pause_animation()\">\n",
+       "      <button title=\"Pause\" aria-label=\"Pause\" onclick=\"anim720a6cfe100547e8b4570dfca532257e.pause_animation()\">\n",
        "          <i class=\"fa fa-pause\"></i></button>\n",
-       "      <button title=\"Play\" aria-label=\"Play\" onclick=\"animca98f79962dd4f03823d05eee973f0e0.play_animation()\">\n",
+       "      <button title=\"Play\" aria-label=\"Play\" onclick=\"anim720a6cfe100547e8b4570dfca532257e.play_animation()\">\n",
        "          <i class=\"fa fa-play\"></i></button>\n",
-       "      <button title=\"Next frame\" aria-label=\"Next frame\" onclick=\"animca98f79962dd4f03823d05eee973f0e0.next_frame()\">\n",
+       "      <button title=\"Next frame\" aria-label=\"Next frame\" onclick=\"anim720a6cfe100547e8b4570dfca532257e.next_frame()\">\n",
        "          <i class=\"fa fa-step-forward\"></i></button>\n",
-       "      <button title=\"Last frame\" aria-label=\"Last frame\" onclick=\"animca98f79962dd4f03823d05eee973f0e0.last_frame()\">\n",
+       "      <button title=\"Last frame\" aria-label=\"Last frame\" onclick=\"anim720a6cfe100547e8b4570dfca532257e.last_frame()\">\n",
        "          <i class=\"fa fa-fast-forward\"></i></button>\n",
-       "      <button title=\"Increase speed\" aria-label=\"Increase speed\" onclick=\"animca98f79962dd4f03823d05eee973f0e0.faster()\">\n",
+       "      <button title=\"Increase speed\" aria-label=\"Increase speed\" onclick=\"anim720a6cfe100547e8b4570dfca532257e.faster()\">\n",
        "          <i class=\"fa fa-plus\"></i></button>\n",
        "    </div>\n",
-       "    <form title=\"Repetition mode\" aria-label=\"Repetition mode\" action=\"#n\" name=\"_anim_loop_selectca98f79962dd4f03823d05eee973f0e0\"\n",
+       "    <form title=\"Repetition mode\" aria-label=\"Repetition mode\" action=\"#n\" name=\"_anim_loop_select720a6cfe100547e8b4570dfca532257e\"\n",
        "          class=\"anim-state\">\n",
-       "      <input type=\"radio\" name=\"state\" value=\"once\" id=\"_anim_radio1_ca98f79962dd4f03823d05eee973f0e0\"\n",
+       "      <input type=\"radio\" name=\"state\" value=\"once\" id=\"_anim_radio1_720a6cfe100547e8b4570dfca532257e\"\n",
        "             >\n",
-       "      <label for=\"_anim_radio1_ca98f79962dd4f03823d05eee973f0e0\">Once</label>\n",
-       "      <input type=\"radio\" name=\"state\" value=\"loop\" id=\"_anim_radio2_ca98f79962dd4f03823d05eee973f0e0\"\n",
+       "      <label for=\"_anim_radio1_720a6cfe100547e8b4570dfca532257e\">Once</label>\n",
+       "      <input type=\"radio\" name=\"state\" value=\"loop\" id=\"_anim_radio2_720a6cfe100547e8b4570dfca532257e\"\n",
        "             checked>\n",
-       "      <label for=\"_anim_radio2_ca98f79962dd4f03823d05eee973f0e0\">Loop</label>\n",
-       "      <input type=\"radio\" name=\"state\" value=\"reflect\" id=\"_anim_radio3_ca98f79962dd4f03823d05eee973f0e0\"\n",
+       "      <label for=\"_anim_radio2_720a6cfe100547e8b4570dfca532257e\">Loop</label>\n",
+       "      <input type=\"radio\" name=\"state\" value=\"reflect\" id=\"_anim_radio3_720a6cfe100547e8b4570dfca532257e\"\n",
        "             >\n",
-       "      <label for=\"_anim_radio3_ca98f79962dd4f03823d05eee973f0e0\">Reflect</label>\n",
+       "      <label for=\"_anim_radio3_720a6cfe100547e8b4570dfca532257e\">Reflect</label>\n",
        "    </form>\n",
        "  </div>\n",
        "</div>\n",
@@ -697,13 +714,13 @@
        "  /* Instantiate the Animation class. */\n",
        "  /* The IDs given should match those used in the template above. */\n",
        "  (function() {\n",
-       "    var img_id = \"_anim_imgca98f79962dd4f03823d05eee973f0e0\";\n",
-       "    var slider_id = \"_anim_sliderca98f79962dd4f03823d05eee973f0e0\";\n",
-       "    var loop_select_id = \"_anim_loop_selectca98f79962dd4f03823d05eee973f0e0\";\n",
-       "    var frames = new Array(1000);\n",
+       "    var img_id = \"_anim_img720a6cfe100547e8b4570dfca532257e\";\n",
+       "    var slider_id = \"_anim_slider720a6cfe100547e8b4570dfca532257e\";\n",
+       "    var loop_select_id = \"_anim_loop_select720a6cfe100547e8b4570dfca532257e\";\n",
+       "    var frames = new Array(2000);\n",
        "    \n",
-       "  for (var i=0; i<1000; i++){\n",
-       "    frames[i] = \"Animations/atoms_test2d33355xxxxxx_frames/frame\" + (\"0000000\" + i).slice(-7) +\n",
+       "  for (var i=0; i<2000; i++){\n",
+       "    frames[i] = \"Animations/atoms_test2d33355zzz_frames/frame\" + (\"0000000\" + i).slice(-7) +\n",
        "                \".png\";\n",
        "  }\n",
        "\n",
@@ -711,7 +728,7 @@
        "    /* set a timeout to make sure all the above elements are created before\n",
        "       the object is initialized. */\n",
        "    setTimeout(function() {\n",
-       "        animca98f79962dd4f03823d05eee973f0e0 = new Animation(frames, img_id, slider_id, 33,\n",
+       "        anim720a6cfe100547e8b4570dfca532257e = new Animation(frames, img_id, slider_id, 33,\n",
        "                                 loop_select_id);\n",
        "    }, 0);\n",
        "  })()\n",
@@ -721,13 +738,13 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "HTML('Animations/atoms_test2d33355xxxxxx.html')"
+    "HTML('Animations/atoms_test2d33355zzz.html')"
    ]
   },
   {
