--- a/MD_simulation/expl_simulate.ipynb
+++ b/MD_simulation/expl_simulate.ipynb
@@ -6,19 +6,21 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 99/99 [00:35<00:00,  2.82it/s]\n",
-      "100%|██████████| 99/99 [00:05<00:00, 18.42it/s]\n",
-      "100%|██████████| 99/99 [00:05<00:00, 18.57it/s]\n"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'MD_simulation'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/r3/w9zx0khs3zndk0070ldpjnmr0000gn/T/ipykernel_3271/3211285726.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;34m'This module executes a simulation. User input is skipped for testing purposes'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;31m# from MD_simulation.animation import POSITIONS\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mMD_simulation\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msrc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcoordinates\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mneighbors2\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mverlet\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'MD_simulation'"
      ]
     }
    ],
    "source": [
-    "'This module executes a simulation. User input is skipped for testing purposes'\n",
+    "'This file executes a simulation. User input is skipped for testing purposes'\n",
     "# from MD_simulation.animation import POSITIONS\n",
-    "from coordinates import *\n",
+    "from MD_simulation.src.coordinates import *\n",
     "from neighbors2 import *\n",
     "from verlet import *\n",
     "from verlet_slow import *\n",
